my small modification is working till now

--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,6 @@
   "permissions": [
     "tabs",
     "activeTab",
-    "scripting",
-    "http://localhost/*",
-    "https://www.googleapis.com/*"
+    "scripting"
   ]
 }
